<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">猪管家</string>
    <string name="title_activity_app_start">AppStart</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_news">资讯</string>
    <string name="main_price">行情</string>
    <string name="main_manufacturer">厂商</string>
    <string name="main_wiki">百科</string>
    <string name="main_profile">管理</string>
    
    <string name="main_price_pig">猪肉价格走势图</string>
    <string name="main_price_corn">玉米价格走势图</string>
    
    <string name="login_dialog_logo">猪管家</string>
    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">输入账号</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_for">忘记密码?</string>
    <string name="login_dialog_reg">我要注册</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_rememberMe">记住我的登录信息</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
	<string name="xlistview_header_hint_ready">释放刷新</string>
	<string name="xlistview_header_hint_loading">正在加载…</string>
	<string name="xlistview_header_last_time">最后更新时间：</string>
	<string name="xlistview_footer_hint_normal">查看更多</string>
	<string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>
